# lib60870

./: CMakeLists.txt  cs101_master_gui.c
build_gui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cs101_master_gui.sln  cs101_master_gui.vcxproj  cs101_master_gui.vcxproj.filters
build_gui/cs101_master_gui.dir/Release/: cs101_master_gui.exe.recipe
build_gui/cs101_master_gui.dir/Release/cs101_master_gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  cs101_master_gui.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_gui/lib60870-C/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  lib60870-C.sln
build_gui/lib60870-C/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  lib60870-shared.vcxproj  lib60870-shared.vcxproj.filters  lib60870.vcxproj
build_gui/lib60870-C/src/Release/: lib60870.lib
build_gui/lib60870-C/src/lib60870-shared.dir/Debug/: objects.txt
build_gui/lib60870-C/src/lib60870-shared.dir/MinSizeRel/: objects.txt
build_gui/lib60870-C/src/lib60870-shared.dir/RelWithDebInfo/: objects.txt
(+18 files in other folders)
